deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-watch
  namespace: cert-watch
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-porkbun
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts: [cert-watch.k8s.hraedon.com]
      secretName: cert-watch-tls
  rules:
    - host: cert-watch.k8s.hraedon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cert-watch
                port:
                  name: http
